# serializer version: 1
# name: test_midea_water_heater_default_state[c3][water_heater.heat_pump_wi_fi_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.heat_pump_wi_fi_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 9>,
    'translation_key': 'water_heater',
    'unique_id': '12345678_water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_midea_water_heater_default_state[c3][water_heater.heat_pump_wi_fi_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <DeviceAttributes.dhw_power: 'dhw_power'>: False,
      <DeviceAttributes.dhw_target_temp: 'dhw_target_temp'>: 25.0,
      <DeviceAttributes.dhw_temp_max: 'dhw_temp_max'>: 60.0,
      <DeviceAttributes.dhw_temp_min: 'dhw_temp_min'>: 20.0,
      <DeviceAttributes.disinfect: 'disinfect'>: False,
      <DeviceAttributes.eco_mode: 'eco_mode'>: False,
      <DeviceAttributes.error_code: 'error_code'>: 0,
      <DeviceAttributes.fast_dhw: 'fast_dhw'>: False,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Wi-Fi Controller',
      <DeviceAttributes.instant_power0: 'instant_power0'>: None,
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 20,
      <DeviceAttributes.mode: 'mode'>: 1,
      <DeviceAttributes.mode_auto: 'mode_auto'>: 1,
      <DeviceAttributes.outdoor_temperature: 'outdoor_temperature'>: None,
      <DeviceAttributes.room_target_temp: 'room_target_temp'>: 30.0,
      <DeviceAttributes.room_temp_max: 'room_temp_max'>: 60.0,
      <DeviceAttributes.room_temp_min: 'room_temp_min'>: 34.0,
      <DeviceAttributes.silent_level: 'silent_level'>: 'off',
      <DeviceAttributes.silent_mode: 'silent_mode'>: False,
      <DeviceAttributes.status_dhw: 'status_dhw'>: None,
      <DeviceAttributes.status_heating: 'status_heating'>: None,
      <DeviceAttributes.status_ibh: 'status_ibh'>: None,
      <DeviceAttributes.status_tbh: 'status_tbh'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 9>,
      <DeviceAttributes.tank_actual_temperature: 'tank_actual_temperature'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <DeviceAttributes.target_temperature: 'target_temperature'>: list([
        25.0,
        25.0,
      ]),
      <DeviceAttributes.tbh: 'tbh'>: False,
      <DeviceAttributes.temp_tw_in: 'temp_tw_in'>: None,
      <DeviceAttributes.temp_tw_out: 'temp_tw_out'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 25,
      <DeviceAttributes.temperature_max: 'temperature_max'>: list([
        0.0,
        0.0,
      ]),
      <DeviceAttributes.temperature_min: 'temperature_min'>: list([
        0.0,
        0.0,
      ]),
      <DeviceAttributes.total_energy_consumption: 'total_energy_consumption'>: None,
      <DeviceAttributes.total_produced_energy: 'total_produced_energy'>: None,
      <DeviceAttributes.zone1_curve: 'zone1_curve'>: False,
      <DeviceAttributes.zone1_power: 'zone1_power'>: False,
      <DeviceAttributes.zone1_room_temp_mode: 'zone1_room_temp_mode'>: False,
      <DeviceAttributes.zone1_water_temp_mode: 'zone1_water_temp_mode'>: False,
      <DeviceAttributes.zone2_curve: 'zone2_curve'>: False,
      <DeviceAttributes.zone2_power: 'zone2_power'>: False,
      <DeviceAttributes.zone2_room_temp_mode: 'zone2_room_temp_mode'>: False,
      <DeviceAttributes.zone2_water_temp_mode: 'zone2_water_temp_mode'>: False,
      <DeviceAttributes.zone_cooling_temp_max: 'zone_cooling_temp_max'>: list([
        25.0,
        25.0,
      ]),
      <DeviceAttributes.zone_cooling_temp_min: 'zone_cooling_temp_min'>: list([
        5.0,
        5.0,
      ]),
      <DeviceAttributes.zone_heating_temp_max: 'zone_heating_temp_max'>: list([
        55.0,
        55.0,
      ]),
      <DeviceAttributes.zone_heating_temp_min: 'zone_heating_temp_min'>: list([
        25.0,
        25.0,
      ]),
      <DeviceAttributes.zone_target_temp: 'zone_target_temp'>: list([
        25.0,
        25.0,
      ]),
      <DeviceAttributes.zone_temp_type: 'zone_temp_type'>: list([
        False,
        False,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.heat_pump_wi_fi_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_midea_water_heater_default_state[cd][water_heater.heat_pump_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 65,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'none',
        'energy_save',
        'standard',
        'dual',
        'smart',
      ]),
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.heat_pump_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': 'water_heater',
    'unique_id': '12345678_water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_midea_water_heater_default_state[cd][water_heater.heat_pump_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <DeviceAttributes.auto_sterilize_hour: 'auto_sterilize_hour'>: None,
      <DeviceAttributes.auto_sterilize_minute: 'auto_sterilize_minute'>: None,
      <DeviceAttributes.auto_sterilize_week: 'auto_sterilize_week'>: None,
      <DeviceAttributes.back_water: 'back_water'>: None,
      <DeviceAttributes.bottom_elec_heat: 'bottom_elec_heat'>: None,
      <DeviceAttributes.bottom_temperature: 'bottom_temperature'>: None,
      <DeviceAttributes.compressor_status: 'compressor_status'>: None,
      <DeviceAttributes.compressor_temperature: 'compressor_temperature'>: 30.0,
      <DeviceAttributes.condenser_temperature: 'condenser_temperature'>: 23.0,
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 41.0,
      <DeviceAttributes.daily_timer_schedule: 'daily_timer_schedule'>: None,
      <DeviceAttributes.disinfect: 'disinfect'>: None,
      <DeviceAttributes.disinfection_temperature: 'disinfection_temperature'>: None,
      <DeviceAttributes.dual_heat: 'dual_heat'>: None,
      <DeviceAttributes.eco: 'eco'>: None,
      <DeviceAttributes.elec_heat: 'elec_heat'>: None,
      <DeviceAttributes.error_code: 'error_code'>: None,
      <DeviceAttributes.fahrenheit: 'fahrenheit'>: False,
      <DeviceAttributes.four_way: 'four_way'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat Pump Water Heater',
      <DeviceAttributes.heat: 'heat'>: None,
      <DeviceAttributes.maintain_warn: 'maintain_warn'>: None,
      <DeviceAttributes.maintain_warn_tag: 'maintain_warn_tag'>: None,
      <DeviceAttributes.maintenance_reminder: 'maintenance_reminder'>: None,
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 65,
      <DeviceAttributes.max_temperature: 'max_temperature'>: 65.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35,
      <DeviceAttributes.min_temperature: 'min_temperature'>: 35.0,
      <DeviceAttributes.mode: 'mode'>: 'standard',
      <DeviceAttributes.multi_terminal: 'multi_terminal'>: None,
      <DeviceAttributes.mute_effect: 'mute_effect'>: None,
      <DeviceAttributes.mute_status: 'mute_status'>: None,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'none',
        'energy_save',
        'standard',
        'dual',
        'smart',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'standard',
      <DeviceAttributes.order1_effect: 'order1_effect'>: None,
      <DeviceAttributes.order2_effect: 'order2_effect'>: None,
      <DeviceAttributes.outdoor_temperature: 'outdoor_temperature'>: 25.0,
      <DeviceAttributes.power: 'power'>: True,
      <DeviceAttributes.smart_grid: 'smart_grid'>: None,
      <DeviceAttributes.sterilize: 'sterilize'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 3>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <DeviceAttributes.target_temperature: 'target_temperature'>: 40.0,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 40,
      <DeviceAttributes.top_elec_heat: 'top_elec_heat'>: None,
      <DeviceAttributes.top_temperature: 'top_temperature'>: None,
      <DeviceAttributes.typeinfo: 'typeinfo'>: None,
      <DeviceAttributes.vacation_days: 'vacation_days'>: 0,
      <DeviceAttributes.vacation_mode: 'vacation_mode'>: False,
      <DeviceAttributes.vacation_start_day: 'vacation_start_day'>: None,
      <DeviceAttributes.vacation_start_month: 'vacation_start_month'>: None,
      <DeviceAttributes.vacation_start_year: 'vacation_start_year'>: None,
      <DeviceAttributes.vacation_temperature: 'vacation_temperature'>: None,
      <DeviceAttributes.water_level: 'water_level'>: None,
      <DeviceAttributes.water_pump: 'water_pump'>: None,
      <DeviceAttributes.weekly_effects: 'weekly_effects'>: None,
      <DeviceAttributes.weekly_schedule: 'weekly_schedule'>: None,
      <DeviceAttributes.wind: 'wind'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.heat_pump_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standard',
  })
# ---
# name: test_midea_water_heater_default_state[e2][water_heater.electric_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 75,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 30,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.electric_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 9>,
    'translation_key': 'water_heater',
    'unique_id': '12345678_water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_midea_water_heater_default_state[e2][water_heater.electric_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <DeviceAttributes.appoint_wash: 'appoint_wash'>: None,
      <DeviceAttributes.bottom_heat: 'bottom_heat'>: None,
      <DeviceAttributes.cloud: 'cloud'>: None,
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.0,
      <DeviceAttributes.day_water_consumption: 'day_water_consumption'>: None,
      <DeviceAttributes.discharge_status: 'discharge_status'>: None,
      <DeviceAttributes.efficient: 'efficient'>: None,
      <DeviceAttributes.eplus: 'eplus'>: None,
      <DeviceAttributes.fast_hot_power: 'fast_hot_power'>: None,
      <DeviceAttributes.fast_wash: 'fast_wash'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Electric Water Heater',
      <DeviceAttributes.half_heat: 'half_heat'>: None,
      <DeviceAttributes.heat_water_level: 'heat_water_level'>: None,
      <DeviceAttributes.heating: 'heating'>: True,
      <DeviceAttributes.heating_power: 'heating_power'>: None,
      <DeviceAttributes.heating_time_remaining: 'heating_time_remaining'>: 50,
      <DeviceAttributes.in_temperature: 'in_temperature'>: None,
      <DeviceAttributes.keep_warm: 'keep_warm'>: True,
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 75,
      <DeviceAttributes.memory: 'memory'>: None,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 30,
      <DeviceAttributes.night: 'night'>: None,
      <DeviceAttributes.now_wash: 'now_wash'>: None,
      <DeviceAttributes.power: 'power'>: True,
      <DeviceAttributes.protection: 'protection'>: False,
      <DeviceAttributes.rate: 'rate'>: None,
      <DeviceAttributes.screen_off: 'screen_off'>: None,
      <DeviceAttributes.sleep: 'sleep'>: None,
      <DeviceAttributes.smart_sterilize: 'smart_sterilize'>: None,
      <DeviceAttributes.sterilization: 'sterilization'>: None,
      <DeviceAttributes.sterilize_high_temp: 'sterilize_high_temp'>: None,
      <DeviceAttributes.summer: 'summer'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 9>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <DeviceAttributes.target_temperature: 'target_temperature'>: 40.0,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 40,
      <DeviceAttributes.temperature_max: 'temperature_max'>: 75.0,
      <DeviceAttributes.temperature_min: 'temperature_min'>: 30.0,
      <DeviceAttributes.top_heat: 'top_heat'>: None,
      <DeviceAttributes.top_temp: 'top_temp'>: None,
      <DeviceAttributes.uv_sterilize: 'uv_sterilize'>: None,
      <DeviceAttributes.variable_heating: 'variable_heating'>: True,
      <DeviceAttributes.volume: 'volume'>: None,
      <DeviceAttributes.water_consumption: 'water_consumption'>: None,
      <DeviceAttributes.water_cyclic: 'water_cyclic'>: None,
      <DeviceAttributes.water_flow: 'water_flow'>: None,
      <DeviceAttributes.water_system: 'water_system'>: None,
      <DeviceAttributes.whole_tank_heating: 'whole_tank_heating'>: True,
      <DeviceAttributes.winter: 'winter'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.electric_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_midea_water_heater_default_state[e3][water_heater.gas_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 65.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35.0,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.gas_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 9>,
    'translation_key': 'water_heater',
    'unique_id': '12345678_water_heater',
    'unit_of_measurement': None,
  })
# ---
# name: test_midea_water_heater_default_state[e3][water_heater.gas_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <DeviceAttributes.burning_state: 'burning_state'>: False,
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 38.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gas Water Heater',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 65.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35.0,
      <DeviceAttributes.power: 'power'>: False,
      <DeviceAttributes.protection: 'protection'>: False,
      <DeviceAttributes.smart_volume: 'smart_volume'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 9>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <DeviceAttributes.target_temperature: 'target_temperature'>: 40.0,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 40.0,
      <DeviceAttributes.temperature_max: 'temperature_max'>: 65.0,
      <DeviceAttributes.temperature_min: 'temperature_min'>: 35.0,
      <DeviceAttributes.zero_cold_pulse: 'zero_cold_pulse'>: False,
      <DeviceAttributes.zero_cold_water: 'zero_cold_water'>: False,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.gas_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_midea_water_heater_default_state[e6][water_heater.gas_boiler-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 80,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 30,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'normal',
        'out',
        'home',
        'sleep',
      ]),
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.gas_boiler',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 15>,
    'translation_key': 'water_heater_heating',
    'unique_id': '12345678_water_heater_heating',
    'unit_of_measurement': None,
  })
# ---
# name: test_midea_water_heater_default_state[e6][water_heater.gas_boiler-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'off',
      <DeviceAttributes.bathing_leaving_temperature: 'bathing_leaving_temperature'>: None,
      <DeviceAttributes.bathing_temperature: 'bathing_temperature'>: 40.0,
      <DeviceAttributes.bathing_working: 'bathing_working'>: None,
      <DeviceAttributes.cold_water_dot: 'cold_water_dot'>: None,
      <DeviceAttributes.cold_water_single: 'cold_water_single'>: None,
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gas Boiler',
      <DeviceAttributes.heating_leaving_temperature: 'heating_leaving_temperature'>: None,
      <DeviceAttributes.heating_modes: 'heating_modes'>: None,
      <DeviceAttributes.heating_power: 'heating_power'>: True,
      <DeviceAttributes.heating_temperature: 'heating_temperature'>: 50.0,
      <DeviceAttributes.heating_working: 'heating_working'>: None,
      <DeviceAttributes.main_power: 'main_power'>: False,
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 80,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 30,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'normal',
        'out',
        'home',
        'sleep',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 15>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 50,
      <DeviceAttributes.temperature_max: 'temperature_max'>: list([
        80.0,
        60.0,
      ]),
      <DeviceAttributes.temperature_min: 'temperature_min'>: list([
        30.0,
        35.0,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.gas_boiler',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_midea_water_heater_default_state[e6][water_heater.gas_boiler_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.gas_boiler_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 9>,
    'translation_key': 'water_heater_bathing',
    'unique_id': '12345678_water_heater_bathing',
    'unit_of_measurement': None,
  })
# ---
# name: test_midea_water_heater_default_state[e6][water_heater.gas_boiler_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <DeviceAttributes.bathing_leaving_temperature: 'bathing_leaving_temperature'>: None,
      <DeviceAttributes.bathing_temperature: 'bathing_temperature'>: 40.0,
      <DeviceAttributes.bathing_working: 'bathing_working'>: None,
      <DeviceAttributes.cold_water_dot: 'cold_water_dot'>: None,
      <DeviceAttributes.cold_water_single: 'cold_water_single'>: None,
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gas Boiler',
      <DeviceAttributes.heating_leaving_temperature: 'heating_leaving_temperature'>: None,
      <DeviceAttributes.heating_modes: 'heating_modes'>: None,
      <DeviceAttributes.heating_power: 'heating_power'>: True,
      <DeviceAttributes.heating_temperature: 'heating_temperature'>: 50.0,
      <DeviceAttributes.heating_working: 'heating_working'>: None,
      <DeviceAttributes.main_power: 'main_power'>: False,
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 9>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 40,
      <DeviceAttributes.temperature_max: 'temperature_max'>: list([
        80.0,
        60.0,
      ]),
      <DeviceAttributes.temperature_min: 'temperature_min'>: list([
        30.0,
        35.0,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.gas_boiler_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
